[package]
name = "inventium"
version = "0.0.1"
edition = "2024"
authors = ["Oganesson897 <oganesson897@gmail.com>"]
description = "Minecraft 3rd-party mod publish platform API wrapper"
repository = "https://github.com/ElectronicWave/Packust"
license = "AGPL-3"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }