[package]
name = "inventium"
version = "0.0.1"
edition = "2024"
authors = ["Oganesson897 <oganesson897@gmail.com>"]
description = "Minecraft 3rd-party mod publish platform API wrapper"
repository = "https://github.com/ElectronicWave/Packust"
license = "AGPL-3"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
url = { version = "2.5.7", features = ["serde"] }
serde_repr = "0.1.20"
serde_json = "1.0.145"
murmur2 = "0.1"
lazy-regex = "3.4.2"